# SkywarnPlus

./: .gitignore  README.md  SYSTEMD_MIGRATION.md  UpdateSWP.py  config.yaml  countyidgen.py  main.py  pyproject.toml  requirements.txt  skycontrol.py  skydescribe.py  swp-install
src/: __init__.py  alert_announcer.py  alert_processor.py  api_client.py  asterisk_integration.py  audio_processor.py  config.py  config_controller.py  constants.py  county_id_generator.py  data_types.py  exceptions.py  notification_service.py  skywarnplus.py  state_manager.py  text_processor.py  tts_processor.py
systemd/: skywarnplus.service  skywarnplus.timer
